Fix labels being stuck at 42px

--- a/enhancedStyles.css
+++ b/enhancedStyles.css
@@ -7,6 +7,7 @@
   text-shadow: none;
   width: auto;
   min-width: 16px;
+  max-width: 100%;
 }
 
 .active-card .card-short-id {
